# discord-websocket

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black.yml
disws/: __init__.py  __main__.py  attachment.py  channel.py  embed.py  emoji.py  guild.py  message.py  role.py  user.py
disws/base/: api_base.py  channel.py  client.py  errors.py  guild.py  user.py  websocket.py
disws/types/: __init__.py  activity.py  channel.py  embed.py  emoji.py  guild.py  message.py  other.py  role.py  thread.py  user.py
disws/utils/: __init__.py  intents.py  logger.py  utils.py
example/: example.txt  get_channel.py  get_guild.py  get_me.py  message_logger.py  send_file.py
